[metadata]
name = pinhop
version = 0.1.2
description = Timehop for Pinboard
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikepqr/pinhop
author = Mike Lee Williams
author_email = mike@mike.place
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords = twitter
project_urls =
    Bug Reports=https://github.com/mikepqr/pinhop/issues
    Source=https://github.com/mikepqr/pinhop

[options]
package_dir = =src
packages = find:
python_requires = >=3.6
install_requires = tqdm

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pinhop=pinhop.pinhop:main
